--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,7 +58,7 @@ div#fp{
 #lin{
   font-variant:small-caps;
   text-align:center;
-  color:red;
+  color:rgb(218, 175, 32);
   padding:10px;
   justify-content:center;
   text-decoration: none;
@@ -66,7 +66,7 @@ div#fp{
 
 #soc{
   text-align:center;
-  color:red;
+  color:rgb(218, 170, 39);
   padding:20px;
   margin:0;
   font-family: "amita";
